Update dgm-builder to be able to build and run against Java 9+